Add hero and about section Add HTML and CSS for the hero and about sections of website.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
 :root {
-    --header-bg-color: #fff;
+    --header-bg-color: #000000;
+    --hero-text-color: #c2ffff;
+    --about-bg-color:#000;
+    --nav-text-color:#fff;
 }
 
 body {
     font-family:'Montserrat','Roboto', sans-serif;
+    background-color:var(--about-bg-color);
     margin:0;
 }
 
 .nav {
-    position:sticky;
+    position:fixed;
+    color:var(--nav-text-color);
+    top: 0px;
+    width:100%;
     display:flex;
     background-color: var(--header-bg-color);
     justify-content: space-between;
     padding:0.75em 0;
     align-items: center;
+    z-index: 1;
     margin:0;
 }
 
@@ -22,8 +30,10 @@ body {
     justify-content: space-around;
     gap:2.5em;
     padding: 0 2em;
+    align-items: center;
 }
 .nav-right{
+    color:var(--nav-text-color);
     display:flex;
     margin:0;
 	padding: 0;
@@ -39,6 +49,9 @@ body {
     align-items: center;
 }
 
+.nav:visited {
+    color:var(--nav-text-color);
+}
 .nav-link a{
     text-decoration: none;
 }
@@ -63,3 +76,107 @@ body {
     padding:0;
     margin:0;
 }
+
+.slideshow {
+    display:flex;
+
+}
+
+.hero {
+    display:flex;
+    flex-direction: column;
+    padding:0px;
+    margin:0;
+    color:var(--hero-text-color);
+}
+
+.hero-gradient {
+    position:relative;
+}
+
+.hero-gradient::after {
+    content: '';
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 100%);
+  
+}
+.hero-left {
+    position:absolute;
+    top:32%;
+    left:7em;
+}
+.hero-text {
+    font-size:min(5vw,6em);
+    margin:0px;
+    padding:0px;
+    line-height:0;
+    text-indent:0px;
+}
+
+.name-chinese {
+    font-size:min(2vw,2em);
+    margin:0px;
+    padding-top:1.5em;
+    text-indent:0.25em;
+}
+
+.hero-bg {
+    width:98.75vw;
+    height:auto;
+}
+
+.slideshow {
+    height:100vh;
+}
+
+.slideshow-img {
+    display:none;
+    visibility:hidden;
+    width:100vw;
+    height:min(auto,100vh);
+    position:absolute;
+    z-index:-1;
+    opacity:1;
+}
+
+.about-pic {
+    width: max(100px, 25vw);
+
+}
+
+a:visited {
+    color:inherit;
+}
+
+.about {
+    display:flex;
+    align-items: center;
+    color:var(--hero-text-color);
+    justify-content: space-around;
+}
+
+.about-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width:40vw;
+}
+
+.about-title, .about-desc {
+    margin:0px;
+}
+
+.about-title {
+    padding-bottom: 1rem;
+}
+.about-title {
+    font-size: 3em;
+}
+
+.about-pic {
+    border-radius: 40px;
+}
+
