--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
     --about-bg-color:#000000;
     --nav-text-color:#fff;
     --footer-text-color:#eee;
-    --posts-text-color:#eee;
+    --latest-post-text-color:#000000;
+    --posts-btn-text-color:rgb(255, 169, 183);
+    font-size:1.5vw;
+    --tag-text-color: #ff3bff;
+    --tag-text-color-hover:#ff00ff;
+    --tag-bg-color:#ffcbff;
+    --post-text-color:#bfdbff;
+    --post-divider-color: hsl(300, 100%, 90%,80%);
 }
 
 body {
@@ -21,7 +28,7 @@ body {
     display:flex;
     background-color: var(--header-bg-color);
     justify-content: space-between;
-    padding:0.75em 0;
+    padding:0.3rem 0;
     align-items: center;
     z-index: 1;
     margin:0;
@@ -30,9 +37,14 @@ body {
 .nav-left {
     display:flex;
     justify-content: space-around;
-    gap:2.5em;
-    padding: 0 2em;
+    gap:2.5rem;
+    padding: 0 2rem;
     align-items: center;
+}
+
+.nav-title {
+    font-size:1rem;
+    margin:0;
 }
 .nav-right{
     color:var(--nav-text-color);
@@ -40,14 +52,14 @@ body {
     margin:0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
 	font: inherit;
+	font-size: 0.7rem;
 	vertical-align: baseline;
     list-style-type:none;
     display:flex;
     justify-content: right;
-    gap:3.5em;
-    padding: 0 2em;
+    gap:3.5rem;
+    padding: 0 2rem;
     align-items: center;
 }
 
@@ -59,7 +71,8 @@ body {
 }
 .nav-icon {
     border-radius:50%;
-    width:3em;
+    width:2.25rem;
+    margin-right:0.75rem;
     height:auto;
 }
 
@@ -72,7 +85,7 @@ body {
 }
 .nav-light-dark-img {
     border-radius: 50%;
-    width:3em;
+    width:1rem;
     height:auto;
     background-color: transparent;
     padding:0;
@@ -81,10 +94,10 @@ body {
 
 .slideshow {
     display:flex;
-
 }
 
 .hero {
+    position:relative;
     display:flex;
     flex-direction: column;
     padding:0px;
@@ -107,10 +120,10 @@ body {
 .hero-left {
     position:absolute;
     top:32%;
-    left:7em;
+    left:7rem;
 }
 .hero-text {
-    font-size:min(5vw,6em);
+    font-size:min(5vw,6rem);
     margin:0px;
     padding:0px;
     line-height:0;
@@ -144,7 +157,7 @@ body {
 }
 
 .about-pic {
-    width: max(100px, 25vw);
+    width: 25vw;
 
 }
 
@@ -179,7 +192,7 @@ a:visited {
 }
 
 .about-pic {
-    border-radius: 40px;
+    border-radius: 15%;
 }
 
 .contact-icon {
@@ -211,9 +224,167 @@ a:visited {
     flex-direction: column;
     align-items: center;
     gap:2rem;
+    color: var(--post-text-color);
+    text-overflow:ellipsis;
+}
+
+.posts-title {
     color:white;
+    margin: 2rem 0;
+    margin-top:3rem;
 }
 
 .latest-post {
+    display:flex;
+    color:var(--latest-post-text-color);
+    justify-content: space-around;
+    background-color:#c2ffff;
+    margin: 0 10%;
+    box-shadow: 0.6rem 0.6rem 0.15rem 0.15rem #1b6464;
+    padding:3rem;
+    padding-bottom:2rem;
+}
 
+.latest-text {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    font-size:0.75rem;
+    width:50%;
+}
+
+.latest-title {
+    margin:0px;
+    font-size:1.5rem;
+    margin-bottom:0.75rem;
+}
+.latest-left {
+    width:30%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:0.3rem;
+}
+
+.latest-post-date {
+    font-size:0.75rem;
+}
+.latest-img {
+    width:100%;
+    height:auto;
+    object-fit:contain;
+}
+
+.latest-desc {
+    width:100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin:0;
+}
+.tags-bar {
+    
+    display:flex;
+    flex-direction: row;
+    align-items: left;
+    justify-content: center;
+    margin:0rem 0;
+    gap:1rem;
+    flex-wrap:wrap;
+    height:2em;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.tag {
+    display:inline-block;
+    color: var(--tag-text-color);
+    background-color: var(--tag-bg-color);
+    border-radius:0.25em;
+    padding:0.25em max(0.25em,0.2rem);
+    font-weight:500;
+    text-overflow: ellipsis;
+    margin:0;
+}
+
+.tag:hover {
+    font-weight:900;
+    color:var(--tag-text-color-hover);
+}
+
+.scrapbook-btn {
+    background-color: transparent;
+    border-radius: 10px;
+    color:var(--posts-btn-text-color);
+    padding:0.5em 1em;
+    border-style:none;
+}
+.scrapbook-btn:hover {
+    border: 1px solid #fff;
+    padding-bottom:calc(0.5em-1px); 
+    padding-top:calc(0.5em-1px);
+
+}
+
+.scrapbook-btn-text {
+    font-size:1rem;
+    display:inline;
+}
+
+.other-posts {
+    margin:0 10%;
+    margin-right:40%;
+    padding-bottom:1.5rem;
+}
+.post {
+    display:flex;
+    flex-direction: column;
+    background-color:var(--post-bg-color);
+    border-bottom: 1.2px solid var(--post-divider-color);
+    margin:1rem 0;
+    padding:0.5rem 0;
+}
+
+.post-title-container {
+    margin:0.5rem 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap:1rem;
+}
+.post-title {
+    margin:0px;
+}
+.post-desc {
+    width:100%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size:0.6rem;
+    margin:0;
+}
+
+.post-date {
+    margin:0;
+    padding:0;
+    flex: 0 0 auto;
+    font-size:0.75rem;
+    height:1rem;
+    padding-right:0.5rem;
+    border-right: 1px solid var(--post-divider-color);
+}
+
+.post-title-container .tags-bar {
+    justify-content: left;
+    align-items: center;
+    padding:0;
+    margin:0;
+    flex:1 1 0;
+    font-size:0.5rem;
 }
