--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 	padding: 0;
 	border: 0;
 	font: inherit;
+    color:var(--nav-text-color);
 	font-size: 0.7rem;
 	vertical-align: baseline;
     list-style-type:none;
